--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = smartcliapp
 version = attr: smartcliapp.__version__
-author = A.A Suvorov
+author = A.A. Suvorov
 author_email = smartlegiondev@gmail.com
 description = 'Cross-platform library of tools for creating console applications, based on the click library.'
 long_description = file: README.md
@@ -37,7 +37,7 @@ packages = find:
 include_package_data = true
 zip_safe = false
 install_requires =
-    smartprinter~=0.2.0
+    smartprinter~=0.2.1
     click~=8.0.1
 
 [coverage:run]
